CORE-8072 Localization: MetraCare: Gérer les bons de commande (Create Quote) Screen is not displayed correctly A javascript unfriendly sign ' was replaced by sign ’ in french resources files Reviewer RPuzikov

--- a/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
@@ -142,7 +142,7 @@
     <value>Actuellement, ce compte ne contient pas de factures/paiements.</value>
   </data>
   <data name="NO_SUBSCRIPTIONS_TEXT" xml:space="preserve">
-    <value>Actuellement, ce compte ne contient pas d'abonnements.</value>
+    <value>Actuellement, ce compte ne contient pas d’abonnements.</value>
   </data>
   <data name="SUBSCRIPTION_GRID_TITLE_TEXT" xml:space="preserve">
     <value>Abonnements</value>
@@ -169,7 +169,7 @@
     <value>Adhérer à un abonnement groupé</value>
   </data>
   <data name="SUBSCRIPTION_JOIN_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
-    <value>Ajouter ce compte en tant que membre d'un abonnement groupé existant</value>
+    <value>Ajouter ce compte en tant que membre d’un abonnement groupé existant</value>
   </data>
   <data name="SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
     <value>Abonnement</value>
