--- a/Account/App_LocalResources/AddAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.fr.resx
@@ -259,6 +259,6 @@
     <value>Nom d’utilisateur</value>
   </data>
   <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
-    <value>Type d'authentification</value>
+    <value>Type d’authentification</value>
   </data>
 </root>
