--- a/Account/App_LocalResources/AddSystemUser.aspx.fr.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.fr.resx
@@ -235,6 +235,6 @@
     <value>Code postal</value>
   </data>
   <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
-    <value>Type d'authentification</value>
+    <value>Type d’authentification</value>
   </data>
 </root>
