--- a/Account/App_LocalResources/GenericAddAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/GenericAddAccount.aspx.fr.resx
@@ -250,6 +250,6 @@
     <value>Exempt de taxe</value>
   </data>
   <data name="tbTaxExemptIDResource1.Label" xml:space="preserve">
-    <value>ID d'exemption de taxe</value>
+    <value>ID d’exemption de taxe</value>
   </data>
 </root>
