--- a/Adjustments/App_LocalResources/CreateCreditNote.aspx.fr.resx
+++ b/Adjustments/App_LocalResources/CreateCreditNote.aspx.fr.resx
@@ -139,7 +139,7 @@
     <value>Documents de la note de crédit</value>
   </data>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
-    <value>Créer un document de note de crédit pour l'ajustement émis</value>
+    <value>Créer un document de note de crédit pour l’ajustement émis</value>
   </data>
   <data name="NO_RECORDS_TEXT" xml:space="preserve">
     <value>Aucun enregistrement trouvé.</value>
