--- a/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.fr.resx
+++ b/Adjustments/App_LocalResources/ViewCreditNotesIssued.aspx.fr.resx
@@ -163,6 +163,6 @@
     <value>État</value>
   </data>
   <data name="TEXT_STATUS_INFORMATION" xml:space="preserve">
-    <value>Informations d'état</value>
+    <value>Informations d’état</value>
   </data>
 </root>
