--- a/App_GlobalResources/FileManagementResources.fr.resx
+++ b/App_GlobalResources/FileManagementResources.fr.resx
@@ -148,7 +148,7 @@
     <value>Code d’erreur actuel</value>
   </data>
   <data name="DETAIL_CURRENT_ERROR_MESSAGE" xml:space="preserve">
-    <value>Message d'erreur en cours</value>
+    <value>Message d’erreur en cours</value>
   </data>
   <data name="DETAIL_CURRENT_STATE" xml:space="preserve">
     <value>État actuel</value>
@@ -229,7 +229,7 @@
     <value>Annuaire entrant</value>
   </data>
   <data name="GLOBAL_INCOMING_DIR_HELP" xml:space="preserve">
-    <value>Le répertoire entrant doit être situé sur le système sur lequel le service FLS (File Landing Service) est exécuté. N'entrez pas de nom de serveur. Par exemple, si FLS est exécuté sur MNServer3 dans D:\\IncomingFLS, entrez D:\\IncomingFLS.</value>
+    <value>Le répertoire entrant doit être situé sur le système sur lequel le service FLS (File Landing Service) est exécuté. n’entrez pas de nom de serveur. Par exemple, si FLS est exécuté sur MNServer3 dans D:\\IncomingFLS, entrez D:\\IncomingFLS.</value>
   </data>
   <data name="GLOBAL_PANEL_TITLE" xml:space="preserve">
     <value>Paramètres généraux de gestion des fichiers</value>
