--- a/ApprovalFrameworkManagement/App_LocalResources/ShowChangesSummary.aspx.fr.resx
+++ b/ApprovalFrameworkManagement/App_LocalResources/ShowChangesSummary.aspx.fr.resx
@@ -145,7 +145,7 @@
     <value>Type</value>
   </data>
   <data name="TEXT_APPROVAL_CHANGE_UNIQUE_ITEM_ID" xml:space="preserve">
-    <value>ID de l'élément modifié</value>
+    <value>ID de l’élément modifié</value>
   </data>
   <data name="TEXT_APPROVAL_NO_RECORD_TEXT" xml:space="preserve">
     <value>Aucun enregistrement trouvé</value>
