--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.fr.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.fr.resx
@@ -139,7 +139,7 @@
     <value>Propriétés de l’abonnement</value>
   </data>
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
-    <value>Mesure des frais récurrents d'offre produit</value>
+    <value>Mesure des frais récurrents d’offre produit</value>
   </data>
   <data name="UDRC_NAME" xml:space="preserve">
     <value>Nom de la mesure</value>
