--- a/GroupSubscriptions/App_LocalResources/SetGroupSubscriptionDate.aspx.fr.resx
+++ b/GroupSubscriptions/App_LocalResources/SetGroupSubscriptionDate.aspx.fr.resx
@@ -178,7 +178,7 @@
     <value>Configuration des remises</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Détails de l'abonnement groupé</value>
+    <value>Détails de l’abonnement groupé</value>
   </data>
   <data name="MTUsageCyclePanel.Text" xml:space="preserve">
     <value>Configuration du cycle d’utilisation</value>
