--- a/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
+++ b/MetraControl/ControlCenter/App_LocalResources/OperationsDashboard.aspx.fr.resx
@@ -130,16 +130,16 @@
     <value>Clôture facture en attente</value>
   </data>
   <data name="pnlRunningAdapters.Text" xml:space="preserve">
-    <value>Adaptateurs en cours d'exécution</value>
+    <value>Adaptateurs en cours d’exécution</value>
   </data>
   <data name="NO_FAILED_ADAPTER_RUNS_TEXT" xml:space="preserve">
-    <value>Aucun adaptateur défectueux en cours d'exécution</value>
+    <value>Aucun adaptateur défectueux en cours d’exécution</value>
   </data>
   <data name="NO_PENDING_BILL_CLOSE_TEXT" xml:space="preserve">
     <value>Aucune clôture de facture en attente</value>
   </data>
   <data name="NO_RUNNING_ADAPTERS_TEXT" xml:space="preserve">
-    <value>Aucun adaptateur en cours d'exécution</value>
+    <value>Aucun adaptateur en cours d’exécution</value>
   </data>
   <data name="TEXT_BILL_GROUP" xml:space="preserve">
     <value>Groupe de factures</value>
@@ -172,7 +172,7 @@
     <value>État</value>
   </data>
   <data name="pnlFailedTransactionsQueueResource.Text" xml:space="preserve">
-    <value>Échec de la file d'attente de transactions</value>
+    <value>Échec de la file d’attente de transactions</value>
   </data>
   <data name="TEXT_OPEN" xml:space="preserve">
     <value>Ouvrir</value>
@@ -190,19 +190,19 @@
     <value>Pendant</value>
   </data>
   <data name="pnlPricingQueue.Text" xml:space="preserve">
-    <value>File d'attente de tarification</value>
+    <value>File d’attente de tarification</value>
   </data>
   <data name="TEXT_PIPELINE_QUEUE" xml:space="preserve">
-    <value>File d'attente de pipeline</value>
+    <value>File d’attente de pipeline</value>
   </data>
   <data name="TEXT_RAMP_QUEUE" xml:space="preserve">
-    <value>File d'attente RAMP</value>
+    <value>File d’attente RAMP</value>
   </data>
   <data name="TEXT_SCHEDULER_QUEUE" xml:space="preserve">
-    <value>File d'attente calendrier</value>
+    <value>File d’attente calendrier</value>
   </data>
   <data name="TEXT_MESSAGES_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
-    <value>messages en attente d'affectation</value>
+    <value>messages en attente d’affectation</value>
   </data>
   <data name="TEXT_MESSAGES_WAITING_IN_RABBITMQ" xml:space="preserve">
     <value>messages en attente dans RabbitMQ</value>
@@ -211,7 +211,7 @@
     <value>tâches en attente de traitement</value>
   </data>
   <data name="pnlBatchUsageResource.Text" xml:space="preserve">
-    <value>Enregistrements de données d'utilisation</value>
+    <value>Enregistrements de données d’utilisation</value>
   </data>
   <data name="TEXT_BATCHES" xml:space="preserve">
     <value>Lots</value>
@@ -220,7 +220,7 @@
     <value>UDR</value>
   </data>
   <data name="pnlActiveBillRun.Text" xml:space="preserve">
-    <value>Facture active en cours d'exécution</value>
+    <value>Facture active en cours d’exécution</value>
   </data>
   <data name="TEXT_3_MONTH_AVERAGE" xml:space="preserve">
     <value>Moyenne 3 mois</value>
@@ -280,7 +280,7 @@
     <value>Moteur de tarification (en temps réel et par lots)</value>
   </data>
   <data name="TEXT_PIPELINE_WAIT_DURATION" xml:space="preserve">
-    <value>Durée d'attente pipeline</value>
+    <value>Durée d’attente pipeline</value>
   </data>
   <data name="TEXT_PIPELINE_PROCESSING_DURATION" xml:space="preserve">
     <value>Durée de traitement pipeline</value>
@@ -289,7 +289,7 @@
     <value>secondes de traitement dans le pipeline </value>
   </data>
   <data name="TEXT_SECONDS_WAITING_TO_BE_ASSIGNED" xml:space="preserve">
-    <value>secondes d'attente d'affectation</value>
+    <value>secondes d’attente d’affectation</value>
   </data>
   <data name="TEXT_DAYS_BACK" xml:space="preserve">
     <value>jours précédents</value>
