--- a/Account/App_LocalResources/UpdateAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/UpdateAccount.aspx.fr.resx
@@ -211,7 +211,7 @@
     <value>Date de début de compte</value>
   </data>
   <data name="tbTaxExemptIDResource1.Label" xml:space="preserve">
-    <value>ID d'exemption de taxe</value>
+    <value>ID d’exemption de taxe</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
     <value>Nom d’utilisateur</value>
@@ -220,6 +220,6 @@
     <value>Question de sécurité personnalisée</value>
   </data>
   <data name="tbAuthenticationTypeResource1.Label" xml:space="preserve">
-    <value>Type d'authentification</value>
+    <value>Type d’authentification</value>
   </data>
 </root>
