--- a/App_GlobalResources/Models.fr.resx
+++ b/App_GlobalResources/Models.fr.resx
@@ -124,7 +124,7 @@
     <value>Valeur par défaut :</value>
   </data>
   <data name="SpecCharacteristicModel_DisplayOrder" xml:space="preserve">
-    <value>Ordre d'affichage :</value>
+    <value>Ordre d’affichage :</value>
   </data>
   <data name="SpecCharacteristicModel_EntityId" xml:space="preserve">
     <value>ID d&amp;apos;entité :</value>
@@ -157,7 +157,7 @@
     <value>Options :</value>
   </data>
   <data name="SpecCharacteristicValueModel_ChoicesDisplayNames" xml:space="preserve">
-    <value>Noms d'options :</value>
+    <value>Noms d’options :</value>
   </data>
   <data name="SpecCharacteristicValueModel_DatetimeValue" xml:space="preserve">
     <value>Valeur date/heure :</value>
