--- a/App_GlobalResources/Reports.fr.resx
+++ b/App_GlobalResources/Reports.fr.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_ADAPTER_NAME" xml:space="preserve">
-    <value>Nom de l'adaptateur</value>
+    <value>Nom de l’adaptateur</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
     <value>Montant</value>
@@ -205,7 +205,7 @@
     <value>Nombre de RC avancés créés</value>
   </data>
   <data name="TEXT_NUM_ARREARS_GENERATED" xml:space="preserve">
-    <value>Nombre d'arriérés créés</value>
+    <value>Nombre d’arriérés créés</value>
   </data>
   <data name="TEXT_NUM_DAYS_IN_PERIOD" xml:space="preserve">
     <value>Nombre de jours dans la période</value>
