--- a/ApprovalFrameworkManagement/App_LocalResources/ChangeSubmittedConfirmation.aspx.fr.resx
+++ b/ApprovalFrameworkManagement/App_LocalResources/ChangeSubmittedConfirmation.aspx.fr.resx
@@ -121,10 +121,10 @@
     <value>Confirmation du changement envoyé</value>
   </data>
   <data name="Panel1Resource1.Text" xml:space="preserve">
-    <value>Changement envoyé avec succès à l'infrastructure d'approbation</value>
+    <value>Changement envoyé avec succès à l’infrastructure d’approbation</value>
   </data>
   <data name="lblContentsResource1.Text" xml:space="preserve">
-    <value>Changement envoyé avec succès à l'infrastructure d'approbation.</value>
+    <value>Changement envoyé avec succès à l’infrastructure d’approbation.</value>
   </data>
   <data name="btnOKResource1.Text" xml:space="preserve">
     <value>OK</value>
