--- a/GroupSubscriptions/App_LocalResources/DeleteGroupSubscription.aspx.fr.resx
+++ b/GroupSubscriptions/App_LocalResources/DeleteGroupSubscription.aspx.fr.resx
@@ -127,7 +127,7 @@
     <value>Messages d’erreur</value>
   </data>
   <data name="lblMessageResource1.Text" xml:space="preserve">
-    <value>Vous êtes sur le point de supprimer du système de façon permanente cet abonnement groupé et toutes les données qu'il contient. Cela n'est autorisé qu'en l'absence de participation à cet abonnement groupé. Ce dernier sera supprimé des modèles de compte auxquels il a été affecté.</value>
+    <value>Vous êtes sur le point de supprimer du système de façon permanente cet abonnement groupé et toutes les données qu'il contient. Cela n’est autorisé qu'en l’absence de participation à cet abonnement groupé. Ce dernier sera supprimé des modèles de compte auxquels il a été affecté.</value>
   </data>
   <data name="PanelTitle" xml:space="preserve">
     <value>Supprimer l’abonnement groupé</value>
