--- a/GroupSubscriptions/App_LocalResources/DeleteGroupSubscriptionMembers.aspx.fr.resx
+++ b/GroupSubscriptions/App_LocalResources/DeleteGroupSubscriptionMembers.aspx.fr.resx
@@ -121,7 +121,7 @@
     <value>Erreur lors de la suppression d’un membre de l’abonnement groupé.</value>
   </data>
   <data name="InfoMsg.Text" xml:space="preserve">
-    <value>Un ou plusieurs abonnements de membres sont sur le point d'être supprimés. Certains de ces abonnements sont encore actifs ; par conséquent, modifiez la date de début en spécifiant le lendemain, pour activer la suppression. Ces membres n'apparaîtront plus dans la liste des abonnés, et l'enregistrement de leurs abonnements sera supprimé.</value>
+    <value>Un ou plusieurs abonnements de membres sont sur le point d’être supprimés. Certains de ces abonnements sont encore actifs ; par conséquent, modifiez la date de début en spécifiant le lendemain, pour activer la suppression. Ces membres n’apparaîtront plus dans la liste des abonnés, et l’enregistrement de leurs abonnements sera supprimé.</value>
   </data>
   <data name="lblConfirmResource1.Text" xml:space="preserve">
     <value>Êtes-vous sûr de vouloir effectuer la suppression ?</value>
@@ -133,7 +133,7 @@
     <value>Messages d’erreur</value>
   </data>
   <data name="lblMessageResource1.Text" xml:space="preserve">
-    <value>Vous êtes sur le point de supprimer du système de façon permanente cet abonnement groupé et toutes les données qu'il contient. Cela n'est autorisé qu'en l'absence de participation à cet abonnement groupé. Ce dernier sera supprimé des modèles de compte auxquels il a été affecté.</value>
+    <value>Vous êtes sur le point de supprimer du système de façon permanente cet abonnement groupé et toutes les données qu'il contient. Cela n’est autorisé qu'en l’absence de participation à cet abonnement groupé. Ce dernier sera supprimé des modèles de compte auxquels il a été affecté.</value>
   </data>
   <data name="MTEffecStartDatePickerResource1.Text" xml:space="preserve">
     <value>Date de début de validité</value>
