--- a/Payments/App_LocalResources/CreditCardList.aspx.fr.resx
+++ b/Payments/App_LocalResources/CreditCardList.aspx.fr.resx
@@ -151,7 +151,7 @@
     <value>Type de carte</value>
   </data>
   <data name="EXPIRATION_DATE" xml:space="preserve">
-    <value>Date d'exp.</value>
+    <value>Date d’exp.</value>
   </data>
   <data name="FIRST_NAME" xml:space="preserve">
     <value>Prénom</value>
