--- a/Reporting/App_LocalResources/ChurnReport.aspx.fr.resx
+++ b/Reporting/App_LocalResources/ChurnReport.aspx.fr.resx
@@ -133,7 +133,7 @@
     <value>Rapport sur les désabonnements</value>
   </data>
   <data name="SUBSCRIPTION_DESCRIPTION" xml:space="preserve">
-    <value>Description de l'abonnement</value>
+    <value>Description de l’abonnement</value>
   </data>
   <data name="SUBSCRIPTION_END_DATE" xml:space="preserve">
     <value>Date de fin de l’abonnement</value>
