--- a/Subscriptions/App_LocalResources/DeleteSubscription.aspx.fr.resx
+++ b/Subscriptions/App_LocalResources/DeleteSubscription.aspx.fr.resx
@@ -121,7 +121,7 @@
     <value>Nom d’affichage</value>
   </data>
   <data name="lblMessageResource1.Text" xml:space="preserve">
-    <value>Utilisez cette option de suppression d'abonnement uniquement lorsque vous souhaitez supprimer tout l'historique de l'abonnement du compte à l'offre de produit. Sinon, cliquez sur le bouton Désabonner de la page précédente (Abonnements). Pour plus d'informations, consultez la rubrique d'aide A propos de la suppression d'abonnements.</value>
+    <value>Utilisez cette option de suppression d’abonnement uniquement lorsque vous souhaitez supprimer tout l’historique de l’abonnement du compte à l’offre de produit. Sinon, cliquez sur le bouton Désabonner de la page précédente (Abonnements). Pour plus d’informations, consultez la rubrique d’aide A propos de la suppression d’abonnements.</value>
   </data>
   <data name="lblPrompt.Text" xml:space="preserve">
     <value>Êtes-vous sûr de vouloir supprimer cet abonnement ?</value>
