--- a/Sites/MetraView/App_GlobalResources/LocalizedIncludes.en-GB.resx
+++ b/Sites/MetraView/App_GlobalResources/LocalizedIncludes.en-GB.resx
@@ -118,7 +118,7 @@
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="LocalizedJavaScript" xml:space="preserve">
-        <value>~/JavaScript/SiteJSConst.js</value>
+        <value>~/JavaScript/SiteJSConst.en-GB.js</value>
     </data>
     <data name="LocalizedJavaScriptTemplates" xml:space="preserve">
         <value>/Res/JavaScript/Templates.js</value>
