--- a/MetraOffer/AmpGui/App_LocalResources/AccountGroup.aspx.fr.resx
+++ b/MetraOffer/AmpGui/App_LocalResources/AccountGroup.aspx.fr.resx
@@ -106,16 +106,16 @@
     </xsd:element>
   </xsd:schema>
   <resheader name="resmimetype">
-    <value>[FR]text/microsoft-resx</value>
+    <value>text/microsoft-resx</value>
   </resheader>
   <resheader name="version">
-    <value>[FR]2.0</value>
+    <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>[FR]System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>[FR]System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ACCOUNTGROUPS_GRID_TITLE" xml:space="preserve">
     <value>[FR]Account Groups</value>
