--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -151,7 +151,7 @@
     <value>Ações</value>
   </data>
   <data name="TEXT_ADD" xml:space="preserve">
-    <value>[pt-BR]Add</value>
+    <value>Adicionar contas</value>
   </data>
   <data name="TEXT_ADD_BME" xml:space="preserve">
     <value>Adicionar</value>
@@ -610,40 +610,40 @@
     <value>Atualização da assinatura</value>
   </data>
   <data name="TEXT_TAX" xml:space="preserve">
-    <value>Tax</value>
+    <value>[pt-BR]Tax</value>
   </data>
   <data name="TEXT_TAX_VENDOR" xml:space="preserve">
-    <value>Fornecedor fiscal</value>
+    <value>[pt-BR]Tax Vendor</value>
   </data>
   <data name="TEXT_TAX_SERVICE_ADDRESS_PCODE" xml:space="preserve">
-    <value>Endereço Código postal</value>
+    <value>[pt-BR]Tax Service Address PCode</value>
   </data>
   <data name="TEXT_METRATAX_COUNTRY_ELIGIBILITY" xml:space="preserve">
-    <value>Elegibilidade do país</value>
+    <value>[pt-BR]MetraTax Country Eligibility</value>
   </data>
   <data name="TEXT_METRATAX_COUNTRY_ZONE" xml:space="preserve">
-    <value>Zona país</value>
+    <value>[pt-BR]MetraTax Country Zone</value>
   </data>
   <data name="TEXT_METRATAX_HAS_OVERRIDE_BAND" xml:space="preserve">
-    <value>Tem banda substituição</value>
+    <value>[pt-BR]MetraTax Has Override Band</value>
   </data>
   <data name="TEXT_METRATAX_OVERRIDE_BAND" xml:space="preserve">
-    <value>Substituir banda</value>
+    <value>[pt-BR]MetraTax Override Band</value>
   </data>
   <data name="TEXT_TAX_REGISTRY_REFERENCE" xml:space="preserve">
-    <value>Registro de referência</value>
+    <value>[pt-BR]Tax Registry Reference</value>
   </data>
   <data name="TEXT_TAX_EXEMPT_REASON" xml:space="preserve">
-    <value>Razão isentos</value>
+    <value>[pt-BR]Tax Exempt Reason</value>
   </data>
   <data name="TEXT_TAX_EXEMPT_START_DATE" xml:space="preserve">
-    <value>Data de início isentos</value>
+    <value>[pt-BR]Tax Exempt Start Date</value>
   </data>
   <data name="TEXT_TAX_EXEMPT_END_DATE" xml:space="preserve">
-    <value>Data final isentos</value>
+    <value>[pt-BR]Tax Exempt End Date</value>
   </data>
   <data name="TEXT_USE_STANDARD_INCLUSIVE_TAX_CALCULATION" xml:space="preserve">
-    <value>Use Padrão Cálculo do Imposto Inclusive</value>
+    <value>[pt-BR]Use Standard Inclusive Tax Calculation</value>
   </data>
   <data name="TEXT_BILL_MESSAGE_ASSOCIATIONS" xml:space="preserve">
     <value>[pt-BR]Bill Message Associations</value>
