--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -676,6 +676,6 @@
     <value>Tableau de bord produit</value>
   </data>
   <data name="TEXT_SEARCH" xml:space="preserve">
-    <value>[FR]Search</value>
+    <value>Recherche</value>
   </data>
 </root>
