--- a/App_LocalResources/ChangePassword.aspx.fr.resx
+++ b/App_LocalResources/ChangePassword.aspx.fr.resx
@@ -144,6 +144,6 @@
     <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;REMARQUE :&lt;/b&gt; En tant que Super utilisateur, vous devrez également modifier l’entrée dans ServerAccess sur chaque machine et la crypter.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
-    <value>[FR]Incorrect old password</value>
+    <value>Ancien mot de passe incorrect</value>
   </data>
 </root>
