--- a/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
@@ -184,6 +184,6 @@
     <value>Paiement</value>
   </data>
   <data name="NO_DECISIONS_TEXT" xml:space="preserve">
-    <value>[FR]No Transactions Found for the Current Interval</value>
+    <value>Aucune transacction détectée pour l’intervalle en cours</value>
   </data>
 </root>
