--- a/Account/App_LocalResources/AddSystemUser.aspx.fr.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.fr.resx
@@ -220,7 +220,7 @@
     <value>Réponse de sécurité</value>
   </data>
   <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
-    <value>[FR]Custom Security Question</value>
+    <value>Question de sécurité personnalisée</value>
   </data>
   <data name="tbStartDateResource1.Label" xml:space="preserve">
     <value>Date de début de compte</value>
