--- a/App_LocalResources/JavaScriptError.aspx.fr.resx
+++ b/App_LocalResources/JavaScriptError.aspx.fr.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ERROR_TEXT" xml:space="preserve">
-    <value>[FR]JavaScript is not enabled!</value>
+    <value>JavaScript n’est pas activé !</value>
   </data>
   <data name="HOWTO_TEXT" xml:space="preserve">
-    <value>[FR]How to enable JavaScript in your browser</value>
+    <value>Comment activer JavaScript dans votre navigateur</value>
   </data>
 </root>
