--- a/config/Localization/metratech.com/metratech.com_internal_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_internal_fr.xml
@@ -12,7 +12,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/Division</Name>
-      <Value>[FR]Division</Value>
+      <Value>Division</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/internal/Folder</Name>
@@ -28,19 +28,19 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/MetraTaxCountryEligibility</Name>
-      <Value>[FR]MetraTax Country Eligibilty</Value>
+      <Value>Eliigibilité pays MetraTax</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/MetraTaxCountryZone</Name>
-      <Value>[FR]MetraTax Country Zone</Value>
+      <Value>Zone pays MetraTax</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/MetraTaxHasOverrideBand</Name>
-      <Value>[FR]MetraTax Has Override Band</Value>
+      <Value>MetraTax a bande de remplacement</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/MetraTaxOverrideBand</Name>
-      <Value>[FR]MetraTax Override Band</Value>
+      <Value>Bande de remplacement MetraTax</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/internal/PaymentMethod</Name>
@@ -60,7 +60,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/internal/SecurityQuestionText</Name>
-      <Value>[FR]Custom Security Question</Value>
+      <Value>Question de sécurité personnalisée</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/internal/StatusReason</Name>
@@ -76,7 +76,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/TaxExemptEndDate</Name>
-      <Value>[FR]Tax Exempt End Date</Value>
+      <Value>Date fin exemption taxe</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/internal/TaxExemptID</Name>
@@ -84,23 +84,23 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/TaxExemptReason</Name>
-      <Value>[FR]Tax Exempt Reason</Value>
+      <Value>Motif exemption taxe</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/TaxExemptStartDate</Name>
-      <Value>[FR]Tax Exempt Start Date</Value>
+      <Value>Date début exemption taxe</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/TaxRegistryReference</Name>
-      <Value>[FR]Tax Registry Reference</Value>
+      <Value>Référence registre taxe</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/TaxServiceAddressPCode</Name>
-      <Value>[FR]Tax Service Address PCode</Value>
+      <Value>PCode adresse Service taxe</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/TaxVendor</Name>
-      <Value>[FR]Tax Vendor</Value>
+      <Value>Fournisseur Taxe</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/internal/TimezoneID</Name>
@@ -112,7 +112,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/Internal/UseStdImpliedTaxAlg</Name>
-      <Value>[FR]Use Standard Inclusive Tax Calculation</Value>
+      <Value>Utiliser calcul taxe incluse standard</Value>
     </locale_entry>
   </locale_space>
 </mt_config>
