--- a/config/Localization/metratech.com/metratech.com_accountcreation_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_accountcreation_pt-br.xml
@@ -32,11 +32,11 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/AccountStatus/PendingActiveApproval</Name>
-      <Value>[pt-BR]PendingActiveApproval</Value>
+      <Value>PendingActiveApproval</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/AccountStatus/PendingFinalBill</Name>
-      <Value>[pt-BR]PendingFinalBill</Value>
+      <Value>PendingFinalBill</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/AccountStatus/Suspended</Name>
@@ -120,7 +120,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/ApplyAccountTemplate</Name>
-      <Value>[pt-BR]ApplyAccountTemplate</Value>
+      <Value>Aplicar modelo de conta</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/ApplyDefaultSecurityPolicy</Name>
@@ -128,11 +128,11 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/AuthenticationType/ActiveDirectory</Name>
-      <Value>[pt-BR]LDAP Authentication</Value>
+      <Value>Autenticação LDAP</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/AuthenticationType/MetraNetInternal</Name>
-      <Value>[pt-BR]MetraNet Authentication</Value>
+      <Value>Autenticação MetraNet</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/billable</Name>
@@ -228,7 +228,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/InvoiceMethod/StandardWithBillMessages</Name>
-      <Value>[pt-BR]Standard With Bill Messages</Value>
+      <Value>Padrão com mensagens de fatura</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/Language</Name>
@@ -332,7 +332,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/SecurityQuestion/FirstSchool</Name>
-      <Value>[pt-BR]What is the name of the first school you attended?</Value>
+      <Value>Qual é o nome da primeira escola que você cursou?</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/SecurityQuestion/MothersMaidenName</Name>
@@ -420,7 +420,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/transactioncookie</Name>
-      <Value>[pt-BR]Transactioncookie</Value>
+      <Value>Cookie de transação</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/accountcreation/TruncateOldSubscriptions</Name>
